manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: repro
  name: repro
spec:
  ports:
  - port: 8080
  selector:
    run: repro
