manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: repro
  name: repro
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: repro
    weight: 100
